# miscfpga

./: .gitignore  LICENSE  README.md
includes/rpdaq/: .gitignore  README.md  pyproject.toml  requirements.txt
includes/rpdaq/docs/: DATA_FORMAT.md
includes/rpdaq/scripts/: run_acquire.sh
includes/rpdaq/src/: rin_cross_spectrum.py
includes/rpdaq/src/rp_rin_stream/: __init__.py  _sciplot.py  bin_to_volts_csv.py  convert.py  metadata.py  rpsa_reader.py
includes/rpdaq/tests/: smoke_rpsa_reader.py  verify_100kHz_capture.py
includes/rpdds/: .gitignore  README.md
includes/rpdds/RedPitaya-FPGA/rtl/: acq.sv  adc366x_top.sv  asg.sv  clb.sv  (+58 more)
includes/rpdds/deploy/: dds_dma_reserved_mem.dts.template  install.sh  install_split.sh.example  load_overlay.sh.example  nginx.conf  rp-dds.service  startup.sh.example  verify.sh.example
includes/rpdds/docs/: COMMANDS.md  IMPLEMENTATION_GUIDE.md  REGISTER_MAP.md  USAGE.md
includes/rpdds/ps/: axi_dma_mm2s.py  dds_cli.py  dds_hw.py  dds_regs.py  dds_service.py  expr_engine.py
includes/rpdds/rtl/: filelist_axi_dma_verilog.f  filelist_legacy_verilog.f  integration_notes_red_pitaya_top_axi_dma.md  red_pitaya_dds_axi_dma.v  red_pitaya_dds_v1_legacy.v  rp_dds_cfg_fsm.v  rp_dds_channel.v  rp_dds_defs.vh  rp_dds_dma_axis_sink.v  rp_dds_lut_ram.v  rp_sine_rom.v  sine4096_14b.mem
includes/rpdds/tb/: README.md  tb_red_pitaya_dds_axi_dma_smoke.v  tb_rp_dds_cfg_fsm.v  tb_rp_dds_channel_memory_modes.v  tb_rp_dds_dma_axis_sink.v
includes/rpdds/tools/: check_pure_verilog.py
includes/rpdds/web/: app.js  glow-tube-display.js  index.html
(+75 files in other folders)
